--- a/public/index.html
+++ b/public/index.html
@@ -6,5 +6,6 @@
   </head>
   <body>
     <h1>Bicycle API</h1>
+    <img src="https://media.giphy.com/media/6ttbVcJin8HK0/giphy.gif" alt="">
   </body>
 </html>
